tests/fail/assignFieldDiv.tiger
a := (b.c).d[5][3+14] / -4 

// probleme au niveau de ValueExp ? 
